@startuml

title __SIMPLE_FRONTEND_MODELS's Class Diagram__\n

  package system.controller {
    package system.controller.simple_frontend_models {
      class GameWithActualQuiz {
          + GameWithActualQuiz()
          + getActualQuiz()
          + setActualQuiz()
      }
    }
  }
  

  package system.controller {
    package system.controller.simple_frontend_models {
      class QuestionGroupWithNumberOfQuestions {
          - numberOfQuestions : int
          + QuestionGroupWithNumberOfQuestions()
          + getNumberOfQuestions()
          + setNumberOfQuestions()
      }
    }
  }
  

  package system.controller {
    package system.controller.simple_frontend_models {
      class QuestionWithCategoryNames {
          - categoryName : String
          - subcategoryName : String
          - subsubcategoryName : String
          ~ QuestionWithCategoryNames()
          + QuestionWithCategoryNames()
          + getCategoryName()
          + setCategoryName()
          + getSubcategoryName()
          + setSubcategoryName()
          + getSubsubcategoryName()
          + setSubsubcategoryName()
      }
    }
  }
  

  package system.controller {
    package system.controller.simple_frontend_models {
      class QuizPartWithCategoryNames {
          - categoryName : String
          - subcategoryName : String
          - subsubcategoryName : String
          ~ QuizPartWithCategoryNames()
          + QuizPartWithCategoryNames()
          + QuizPartWithCategoryNames()
          + QuizPartWithCategoryNames()
          + getCategoryName()
          + setCategoryName()
          + getSubcategoryName()
          + setSubcategoryName()
          + getSubsubcategoryName()
          + setSubsubcategoryName()
      }
    }
  }
  

  package system.controller {
    package system.controller.simple_frontend_models {
      class QuizWithCategoryNames {
          - categoryName : String
          - subcategoryName : String
          - subsubcategoryName : String
          ~ QuizWithCategoryNames()
          + QuizWithCategoryNames()
          + getCategoryName()
          + setCategoryName()
          + getSubcategoryName()
          + setSubcategoryName()
          + getSubsubcategoryName()
          + setSubsubcategoryName()
      }
    }
  }
  

  package system.controller {
    package system.controller.simple_frontend_models {
      class Response {
          - result : Map<String, Object>
          + Response()
          + Response()
          + put()
          + getResult()
          + setResult()
      }
    }
  }
  

  GameWithActualQuiz -up-|> Game
  GameWithActualQuiz o-- Quiz : actualQuiz
  QuestionGroupWithNumberOfQuestions -up-|> QuestionGroup
  QuestionWithCategoryNames -up-|> Question
  QuizPartWithCategoryNames -up-|> QuizPart
  QuizWithCategoryNames -up-|> Quiz


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
